[tool.poetry]
name = "data-validation"
version = "0.1.0"
description = ""
authors = ["wk-tan <wk.tan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
great-expectations = "^0.9.2"
ipykernel = "^5.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
